--- a/css/style.css
+++ b/css/style.css
@@ -81,27 +81,47 @@ input[type="search"]:focus {    /*Adiciona borda e sombra quando estiver selecio
     background-color: #004362;
     filter: brightness(70%);
     width: 100%;
-    height: 1000px;
+    height: 800px;
     position: fixed;
 }
 
 .position-sobre{
      margin-left: 200px;
      height: 250px;
-     width: 50%;
+     width: 100%;
 }
 
 .sobre-texto {
-    width: 100%;
+    width: 400px;
     height: 450px;
-    margin-left: 20%;
-
+    margin-left: 400px;
 }
 
 .imagem-sobre1{
-    background-image: url('https://placehold.co/250x250/white/back');
-    background-position: center;
-    height: 250px;
-    width: 250px;
-    margin-left: 120%;
+    background-image: url('https://placehold.co/450x350/white/back');
+    height: 350px;
+    width: 450px;
+    margin-left: 700px;
+    margin-top: -200px;
+}
+
+.sobre-texto2 {
+    width: 400px;
+    height: 450px;
+    margin-left: 400px;
+}
+
+.imagem-sobre2{
+    background-image: url('https://placehold.co/450x350/white/back');
+    height: 350px;
+    width: 450px;
+    margin-left: 700px;
+    margin-top: -200px;
+}
+
+.home3{
+    background-color: #004362;
+    filter: brightness(70%);
+    width: 100%;
+    height: 1000px;
 }
