--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body, html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.wrapper{
+    background-color: white;
+    width: 100%;
+    height: 2500px;
+}
 .header{
     position: fixed;
     top: 0;
@@ -50,8 +55,8 @@ nav ul li img {
 }
 
 .background-image {
-    height: 450px;
-    background-image: url('https://placehold.co/1000x450/green/white');
+    height: 550px;
+    background-image: url('https://picsum.photos/id/666/1920/550');
     background-size: cover;
     background-position: center;
     filter: brightness(100%);
@@ -81,27 +86,88 @@ input[type="search"]:focus {    /*Adiciona borda e sombra quando estiver selecio
     background-color: #004362;
     filter: brightness(70%);
     width: 100%;
-    height: 1000px;
-    position: fixed;
+    height: 500px;
+    position: absolute;
 }
 
 .position-sobre{
-     margin-left: 200px;
-     height: 250px;
-     width: 50%;
+    width: 100%;
+    height: 250px;
 }
 
 .sobre-texto {
-    width: 100%;
-    height: 450px;
-    margin-left: 20%;
-
+    width: 400px;
+    height: 30px;
+    margin-left: 500px;
 }
 
 .imagem-sobre1{
-    background-image: url('https://placehold.co/250x250/white/back');
-    background-position: center;
     height: 250px;
     width: 250px;
-    margin-left: 120%;
+    margin-left: 1150px;
+}
+
+.team {
+    background-color: #007BFF;
+    margin-top: 500px;
+    height: 300px;
+}
+
+.card-member-1 {
+    width: 150px;
+    height: 250px;
+    margin-top: 40px;
+    margin-left: 280px;
+    position: absolute;
+    text-align: center;
+}
+
+.member-imagem{
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+}
+
+.member-name{
+    font-size: 17px;
+}
+
+.member-function{
+    font-size: 12px;
+}
+
+.card-member-2 {
+    width: 150px;
+    height: 250px;
+    margin-top: 40px;
+    margin-left: 580px;
+    position: absolute;
+    text-align: center;
+}
+
+.card-member-3 {
+    width: 150px;
+    height: 250px;
+    margin-top: 40px;
+    margin-left: 885px;
+    position: absolute;
+    text-align: center;
+}
+
+.card-member-4 {
+    width: 150px;
+    height: 250px;
+    margin-top: 40px;
+    margin-left: 1200px;
+    position: absolute;
+    text-align: center;
+}
+
+.card-member-5 {
+    width: 150px;
+    height: 250px;
+    margin-top: 40px;
+    margin-left: 1500px;
+    position: absolute;
+    text-align: center;
 }
