--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,10 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 18px;
+    font-family: Audiowide;
     padding: 8px 16px;
     transition: background-color 0.5s;
+    opacity: 100%;
 }
 
 nav ul li a:hover {
@@ -51,40 +53,30 @@ nav ul li i {
 
 nav ul li img {
     align-items: center;
+    margin-left: -350px;
     margin-top: -8px;
 }
+
 
 .background-image {
     height: 550px;
     background-image: url('https://picsum.photos/id/666/1920/550');
     background-size: cover;
     background-position: center;
-    filter: brightness(100%);
 }
 
-input[type="search"] {
-    margin-top: -5px;
-    width: 200px;   /* Largura do input */
-    padding: 5px;   /* Espaçamento interno */
-    border: 1px solid #cccccc;  
-    border-radius: 2px;    
-    font-size: 16px;    
-    outline: none;  /* Remove o contorno ao clicar */
+.menu{
+    background-color: black;
+    height: 55px;
 }
 
-input[type="search"]::placeholder {
-    color: #999999;     /* Cor do texto do placeholder */
-    font-style: italic;    
-}
-
-input[type="search"]:focus {    /*Adiciona borda e sombra quando estiver selecionado */
-    border-color: #007BFF;
-    box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
+.position-krono{
+    margin-top: 170px;
+    margin-left: 750px;
 }
 
 .home2{
-    background-color: #004362;
-    filter: brightness(70%);
+    background-color: #ffffff;
     width: 100%;
     height: 500px;
     position: absolute;
@@ -93,33 +85,30 @@ input[type="search"]:focus {    /*Adiciona borda e sombra quando estiver selecio
 .position-sobre{
     width: 100%;
     height: 250px;
+    margin-top: 50px;
 }
 
 .sobre-texto {
-    width: 400px;
+    width: 450px;
     height: 30px;
-    margin-left: 500px;
+    margin-left: 450px;
 }
 
 .imagem-sobre1{
-    height: 250px;
-    width: 250px;
     margin-left: 1150px;
 }
 
-.team {
-    background-color: #007BFF;
-    margin-top: 500px;
-    height: 300px;
+.title-team{
+    font-family: Audiowide;
+    color: white;
+    font-size: 30px;
+    text-align: center;
 }
 
-.card-member-1 {
-    width: 150px;
-    height: 250px;
-    margin-top: 40px;
-    margin-left: 280px;
-    position: absolute;
-    text-align: center;
+.team {
+    background-color: #E0830F;
+    margin-top: 500px;
+    height: 450px;
 }
 
 .member-imagem{
@@ -133,7 +122,16 @@ input[type="search"]:focus {    /*Adiciona borda e sombra quando estiver selecio
 }
 
 .member-function{
-    font-size: 12px;
+    font-size: 14px;
+}
+
+.card-member-1 {
+    width: 150px;
+    height: 250px;
+    margin-top: 40px;
+    margin-left: 280px;
+    position: absolute;
+    text-align: center;
 }
 
 .card-member-2 {
