--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,71 @@ nav ul li img {
     position: absolute;
     text-align: center;
 }
+
+.bubatag{
+    position: absolute;
+}
+.bubatag-imagem{
+    background-color: #2F3E46;
+    width: 850px;
+    height: 400px;
+    border-radius: 20%;
+    border-style: solid;
+    border-color: #05DA00;
+    border-width: 5px;
+    margin-top: 170px;
+    margin-left: -100px;
+}
+
+.position-imagem-bubatag{
+    margin-left: 250px;
+    margin-top: 15px;
+}
+
+.position-text-project{
+    margin-left: 1150px;
+    width: 550px;
+    margin-top: -400px;
+}
+
+.footer{
+    background-color: #E0830F;
+    width: 100%;
+    height: 270px;
+    margin-top: 750px;
+    margin-bottom: 0px;
+    position: absolute;
+}
+
+.position-logo-krono-footer{
+    margin-top: 90px;
+    margin-left: 80px;
+    width: 116;
+    height: 79;
+}
+
+.text-footer-1{
+    margin-left: 600px;
+    margin-top: -90px;
+    width: 250px;
+}
+
+.text-footer-2{
+    margin-left: 900px;
+    margin-top: -90px;
+    width: 250px;
+}
+
+.text-footer-3{
+    margin-left: 1400px;
+    width: 250px;
+}
+
+
+.direitos{
+    text-align: center;
+    color: white;
+    font-family: Audiowide;
+    font-size: 16px;
+    margin-top: 95px;
+}
