--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body, html{
     width: 100%;
     background-color: rgb(0, 0, 0, 0.7);
     padding: 10px 0;
-    z-index: 100;
 }
 
 nav ul{
@@ -43,7 +42,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: black; /*Altera a cor hover dos botões da navbar*/
+    background-color: black;
     border-radius: 4px;
 }
 
@@ -57,17 +56,15 @@ nav ul li img {
     margin-top: -8px;
 }
 
-
-.background-image {
-    height: 550px;
-    background-image: url('https://picsum.photos/id/666/1920/550');
-    background-size: cover;
+.primary-imagem{
+    margin-top: -400px;
     background-position: center;
+    background-color: black;
 }
 
 .menu{
-    background-color: black;
     height: 55px;
+    background-color: black;
 }
 
 .position-krono{
@@ -175,25 +172,25 @@ nav ul li img {
 }
 .bubatag-imagem{
     background-color: #2F3E46;
-    width: 850px;
-    height: 400px;
+    width: 1050px;
+    height: 450px;
     border-radius: 20%;
     border-style: solid;
     border-color: #05DA00;
     border-width: 5px;
     margin-top: 170px;
-    margin-left: -100px;
+    margin-left: -200px;
 }
 
 .position-imagem-bubatag{
-    margin-left: 250px;
-    margin-top: 15px;
+    margin-left: 450px;
+    margin-top: 45px;
 }
 
 .position-text-project{
     margin-left: 1150px;
     width: 550px;
-    margin-top: -400px;
+    margin-top: -450px;
 }
 
 .footer{
@@ -213,27 +210,33 @@ nav ul li img {
 }
 
 .text-footer-1{
-    margin-left: 600px;
+    margin-left: 500px;
     margin-top: -90px;
     width: 250px;
+    color: white;
+    font-family: Audiowide;
 }
 
 .text-footer-2{
     margin-left: 900px;
-    margin-top: -90px;
+    margin-top: -80px;
     width: 250px;
+    color: white;
+    font-family: Audiowide;
 }
 
 .text-footer-3{
-    margin-left: 1400px;
+    margin-left: 1300px;
     width: 250px;
+    margin-top: -80px;
+    color: white;
+    font-family: Audiowide;
 }
-
 
 .direitos{
     text-align: center;
     color: white;
     font-family: Audiowide;
     font-size: 16px;
-    margin-top: 95px;
+    margin-top: 85px;
 }
