Correção na imagem principal da bubatag =

--- a/css/style.css
+++ b/css/style.css
@@ -362,3 +362,8 @@ nav ul li img {
     margin-top: -375px;
     position: relative;
 }
+
+.primary-imagem-bubatag{
+    background-color: black;
+    
+}
