--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ nav ul li img {
 
 .primary-imagem img {
     width: 100%;
-    height: 700px;
+    height: 800px;
 }
 
 .texto-centralizado {
@@ -288,6 +288,13 @@ nav ul li img {
     width: 100%;
     height: 450px;
     margin-top: -200px;
+}
+
+.home5-bubatag{
+    background-color: #2F3E46;
+    width: 100%;
+    height: 450px;
+    margin-top: -100px;
 }
 
 .mercado-bubatag{
